Fixed issue with Tabby Response tabs not have visible focus Fixed issue with Tabby Response tabs color contrast

--- a/css/custom.css
+++ b/css/custom.css
@@ -243,3 +243,13 @@ span.asterisk, .mce_inline_error{
 #mc-embedded-subscribe-form input.required.mce_inline_error{
   border: 2px solid #D24532 !important;
 }
+
+/* Tabby Response ADA Fixes */
+li.responsive-tabs__list__item.keyboard-outline,
+li.responsive-tabs__list__item.responsive-tabs__list__item--active:focus
+{
+    outline: #2ea3f2 solid 2px !important;
+}
+li.responsive-tabs__list__item{
+  color: #757575 !important;
+}
